--- a/dome.html
+++ b/dome.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src='./vue.js'></script>
-    <title>小练习</title>
+    <title>这是我的第一次修改</title>
     <style>
       
     </style>
